--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,8 @@ body {
   margin: 0 auto;
   border: 4px solid #222;
   border-radius: 1.25rem;
-  overflow: hidden;
+  overflow-y: auto;
+  overflow-x: visible;
   box-shadow: 0 0 40px 0 #000a;
   background: #18181b;
   box-sizing: border-box;
